--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
