--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.45.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
