--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.25.1",
     "@hookform/resolvers": "^3.2.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
