--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.25.1",
     "@hookform/resolvers": "^3.2.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.4.0",
     "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
