--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.2.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
