--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "classnames": "^2.3.2",
     "dompurify": "^3.0.5",
     "framer-motion": "^10.16.0",
+    "i18next": "^23.5.1",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-i18next": "^13.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
