Chuyển sang môi trường jsdom để test các api browser

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
     "@types/html-to-text": "^9.0.2",
+    "@types/jsdom": "^21.1.4",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
@@ -47,6 +48,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.28",
     "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.3.3",
